--- a/contract_eth/.gitignore
+++ b/contract_eth/.gitignore
@@ -13,8 +13,6 @@ docs/
 # Dotenv file
 .env
 
-[submodule "lib/forge-std"]
-	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
-	branch = v1.4.0
-    ignore = dirty
+# lib
+
+lib/
