--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contract_eth/lib/openzeppelin-contracts"]
 	path = contract_eth/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "nft_exemple/lib/forge-std"]
+	path = nft_exemple/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
